feat(logsearch): 关键字搜索需求默认应用所有配置关键字字段, 不再需要指定字段关键字搜索
Signed-off-by: 汪世胤 <wangshiyin@hinadt.com>